Move cache clearing out of ActionPool's destructor, and force Core to trigger cache clearing on destruction.

ActionPool is a global object, hence the destructor won't be called after Core has been deleted. For this reason, clearing should occur inside Core itself,
or upon a restart, thr cache could be corrupted.

BUG: 264565
FIXED-IN: 4.6.1

(cherry picked from commit f4517e2bb59ff6bc4c1b38724f49aa54fec6c0f9)