daemon/powerdevilcore.cpp
@@ -59,8 +59,9 @@ Core::Core(QObject* parent, const KComponentData &componentData)
 
 Core::~Core()
 {
-    // Unload all actions before exiting
+    // Unload all actions before exiting, and clear the cache
     ActionPool::instance()->unloadAllActiveActions();
+    ActionPool::instance()->clearCache();
 }
 
 void Core::loadCore(BackendInterface* backend)
